compiler/bones/grammarNumLangParser.py
# Generated from bones/grammarNumLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarNumLangParser ( Parser ):

    grammarFileName = "grammarNumLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'template'", "'<'", "'>'", "','", "'type'", 
                     "'('", "')'", "'['", "']'", "';'", "'if'", "'then'", 
                     "'else'", "'for'", "'while'", "'break'", "'continue'", 
                     "'='", "'return'", "'&&'", "'||'", "'<='", "'=='", 
                     "'>='", "'!='", "'+'", "'-'", "'*'", "'/'", "'^'", 
                     "'!'", "'sum'", "'integral'", "'derivative'", "'in'", 
                     "'out'", "'solveLU'", "<INVALID>", "<INVALID>", "'function'", 
                     "'Main'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "BASE_TYPE", "FUNCTION", 
                      "FUNC_MAIN_ID", "LFIG_BR", "RFIG_BR", "INT", "FLOAT", 
                      "CHAR", "STRING", "ID" ]

    RULE_prog = 0
    RULE_template_decl = 1
    RULE_template_param_list = 2
    RULE_template_param = 3
    RULE_func_decl = 4
    RULE_func_main = 5
    RULE_param_list = 6
    RULE_param = 7
    RULE_func_body = 8
    RULE_statement = 9
    RULE_expr_statement = 10
    RULE_if_statement = 11
    RULE_for_statement = 12
    RULE_while_statement = 13
    RULE_break_statement = 14
    RULE_continue_statement = 15
    RULE_var_decl = 16
    RULE_return_statement = 17
    RULE_expr = 18
    RULE_assignment_expr = 19
    RULE_logic_expr = 20
    RULE_comparison_expr = 21
    RULE_additive_expr = 22
    RULE_multiplicative_expr = 23
    RULE_unary_expr = 24
    RULE_primary_expr = 25
    RULE_special_expr = 26
    RULE_cast_expr = 27
    RULE_sum_expr = 28
    RULE_integral_expr = 29
    RULE_derivative_expr = 30
    RULE_input_expr = 31
    RULE_output_expr = 32
    RULE_solveLU_expr = 33
    RULE_func_call = 34
    RULE_template_arg_list = 35
    RULE_template_arg = 36
    RULE_array_access = 37
    RULE_matrix = 38
    RULE_row = 39
    RULE_vector = 40

    ruleNames =  [ "prog", "template_decl", "template_param_list", "template_param", 
                   "func_decl", "func_main", "param_list", "param", "func_body", 
                   "statement", "expr_statement", "if_statement", "for_statement", 
                   "while_statement", "break_statement", "continue_statement", 
                   "var_decl", "return_statement", "expr", "assignment_expr", 
                   "logic_expr", "comparison_expr", "additive_expr", "multiplicative_expr", 
                   "unary_expr", "primary_expr", "special_expr", "cast_expr", 
                   "sum_expr", "integral_expr", "derivative_expr", "input_expr", 
                   "output_expr", "solveLU_expr", "func_call", "template_arg_list", 
                   "template_arg", "array_access", "matrix", "row", "vector" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    WS=38
    BASE_TYPE=39
    FUNCTION=40
    FUNC_MAIN_ID=41
    LFIG_BR=42
    RFIG_BR=43
    INT=44
    FLOAT=45
    CHAR=46
    STRING=47
    ID=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammarNumLangParser.EOF, 0)

        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.Func_declContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.Func_declContext,i)


        def func_main(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.Func_mainContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.Func_mainContext,i)


        def template_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.Template_declContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.Template_declContext,i)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = grammarNumLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 282024732524546) != 0):
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 82
                    self.func_decl()
                    pass

                elif la_ == 2:
                    self.state = 83
                    self.func_main()
                    pass

                elif la_ == 3:
                    self.state = 84
                    self.template_decl()
                    pass


                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(grammarNumLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template_param_list(self):
            return self.getTypedRuleContext(grammarNumLangParser.Template_param_listContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(grammarNumLangParser.Func_declContext,0)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_template_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_decl" ):
                listener.enterTemplate_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_decl" ):
                listener.exitTemplate_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_decl" ):
                return visitor.visitTemplate_decl(self)
            else:
                return visitor.visitChildren(self)




    def template_decl(self):

        localctx = grammarNumLangParser.Template_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_template_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(grammarNumLangParser.T__0)
            self.state = 93
            self.match(grammarNumLangParser.T__1)
            self.state = 94
            self.template_param_list()
            self.state = 95
            self.match(grammarNumLangParser.T__2)
            self.state = 96
            self.func_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template_param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.Template_paramContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.Template_paramContext,i)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_template_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_param_list" ):
                listener.enterTemplate_param_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_param_list" ):
                listener.exitTemplate_param_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_param_list" ):
                return visitor.visitTemplate_param_list(self)
            else:
                return visitor.visitChildren(self)




    def template_param_list(self):

        localctx = grammarNumLangParser.Template_param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_template_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.template_param()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 99
                self.match(grammarNumLangParser.T__3)
                self.state = 100
                self.template_param()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarNumLangParser.ID, 0)

        def getRuleIndex(self):
            return grammarNumLangParser.RULE_template_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_param" ):
                listener.enterTemplate_param(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_param" ):
                listener.exitTemplate_param(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_param" ):
                return visitor.visitTemplate_param(self)
            else:
                return visitor.visitChildren(self)




    def template_param(self):

        localctx = grammarNumLangParser.Template_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_template_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(grammarNumLangParser.T__4)
            self.state = 107
            self.match(grammarNumLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(grammarNumLangParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammarNumLangParser.ID)
            else:
                return self.getToken(grammarNumLangParser.ID, i)

        def LFIG_BR(self):
            return self.getToken(grammarNumLangParser.LFIG_BR, 0)

        def func_body(self):
            return self.getTypedRuleContext(grammarNumLangParser.Func_bodyContext,0)


        def RFIG_BR(self):
            return self.getToken(grammarNumLangParser.RFIG_BR, 0)

        def BASE_TYPE(self):
            return self.getToken(grammarNumLangParser.BASE_TYPE, 0)

        def param_list(self):
            return self.getTypedRuleContext(grammarNumLangParser.Param_listContext,0)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = grammarNumLangParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==39 or _la==48):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self.match(grammarNumLangParser.FUNCTION)
            self.state = 111
            self.match(grammarNumLangParser.ID)
            self.state = 112
            self.match(grammarNumLangParser.T__5)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39 or _la==48:
                self.state = 113
                self.param_list()


            self.state = 116
            self.match(grammarNumLangParser.T__6)
            self.state = 117
            self.match(grammarNumLangParser.LFIG_BR)
            self.state = 118
            self.func_body()
            self.state = 119
            self.match(grammarNumLangParser.RFIG_BR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_mainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BASE_TYPE(self):
            return self.getToken(grammarNumLangParser.BASE_TYPE, 0)

        def FUNCTION(self):
            return self.getToken(grammarNumLangParser.FUNCTION, 0)

        def FUNC_MAIN_ID(self):
            return self.getToken(grammarNumLangParser.FUNC_MAIN_ID, 0)

        def LFIG_BR(self):
            return self.getToken(grammarNumLangParser.LFIG_BR, 0)

        def func_body(self):
            return self.getTypedRuleContext(grammarNumLangParser.Func_bodyContext,0)


        def RFIG_BR(self):
            return self.getToken(grammarNumLangParser.RFIG_BR, 0)

        def param_list(self):
            return self.getTypedRuleContext(grammarNumLangParser.Param_listContext,0)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_func_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_main" ):
                listener.enterFunc_main(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_main" ):
                listener.exitFunc_main(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_main" ):
                return visitor.visitFunc_main(self)
            else:
                return visitor.visitChildren(self)




    def func_main(self):

        localctx = grammarNumLangParser.Func_mainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(grammarNumLangParser.BASE_TYPE)
            self.state = 122
            self.match(grammarNumLangParser.FUNCTION)
            self.state = 123
            self.match(grammarNumLangParser.FUNC_MAIN_ID)
            self.state = 124
            self.match(grammarNumLangParser.T__5)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39 or _la==48:
                self.state = 125
                self.param_list()


            self.state = 128
            self.match(grammarNumLangParser.T__6)
            self.state = 129
            self.match(grammarNumLangParser.LFIG_BR)
            self.state = 130
            self.func_body()
            self.state = 131
            self.match(grammarNumLangParser.RFIG_BR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.ParamContext,i)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = grammarNumLangParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.param()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 134
                self.match(grammarNumLangParser.T__3)
                self.state = 135
                self.param()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BASE_TYPE(self):
            return self.getToken(grammarNumLangParser.BASE_TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammarNumLangParser.ID)
            else:
                return self.getToken(grammarNumLangParser.ID, i)

        def getRuleIndex(self):
            return grammarNumLangParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = grammarNumLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(grammarNumLangParser.BASE_TYPE)
                self.state = 142
                self.match(grammarNumLangParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(grammarNumLangParser.ID)
                self.state = 144
                self.match(grammarNumLangParser.T__7)
                self.state = 145
                self.match(grammarNumLangParser.T__8)
                self.state = 146
                self.match(grammarNumLangParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.match(grammarNumLangParser.ID)
                self.state = 148
                self.match(grammarNumLangParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):

        localctx = grammarNumLangParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 546180455714112) != 0):
                self.state = 151
                self.statement()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.Expr_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.For_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.While_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.Continue_statementContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(grammarNumLangParser.Var_declContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(grammarNumLangParser.Return_statementContext,0)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = grammarNumLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.expr_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.if_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.for_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 161
                self.break_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 162
                self.continue_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 163
                self.var_decl()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 164
                self.return_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 165
                self.match(grammarNumLangParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(grammarNumLangParser.ExprContext,0)


        def getRuleIndex(self):
            return grammarNumLangParser.RULE_expr_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_statement" ):
                listener.enterExpr_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_statement" ):
                listener.exitExpr_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_statement" ):
                return visitor.visitExpr_statement(self)
            else:
                return visitor.visitChildren(self)




    def expr_statement(self):

        localctx = grammarNumLangParser.Expr_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.expr()
            self.state = 169
            self.match(grammarNumLangParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(grammarNumLangParser.ExprContext,0)


        def LFIG_BR(self, i:int=None):
            if i is None:
                return self.getTokens(grammarNumLangParser.LFIG_BR)
            else:
                return self.getToken(grammarNumLangParser.LFIG_BR, i)

        def func_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarNumLangParser.Func_bodyContext)
            else:
                return self.getTypedRuleContext(grammarNumLangParser.Func_bodyContext,i)


        def RFIG_BR(self, i:int=None):
            if i is None:
                return self.getTokens(grammarNumLangParser.RFIG_BR)
            else:
                return self.getToken(grammarNumLangParser.RFIG_BR, i)
